--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ li.dropdown {
   display: block;
 }
 body {
- background-image:url("https://i.redd.it/ho2muex3hne81.jpg") ;
+ background-image:url("https://drive.google.com/file/d/1fk7lPMGwCXSwPXOhb2dNlLvaj0glsxxb/preview") ;
  color: white;
  background-size:cover;
  background-repeat:no-repeat;
@@ -140,6 +140,7 @@ h1 {
   <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">tutorial</a>
     <div class="dropdown-content">
             <a href="stackingtutorial.html">stacking tutorial</a>
+            <a href="planewidfieldtutorial.html"> plane widefield tutorial</a>
       
     </div>
   </li>
