--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ li.dropdown {
   display: block;
 }
 body {
- background-image:url("https://drive.google.com/file/d/1fk7lPMGwCXSwPXOhb2dNlLvaj0glsxxb/preview") ;
+ background-image:url("blob:https://app.astrobin.com/7c4d46b0-0447-4c12-82e6-3b995bac2fe6") ;
  color: white;
  background-size:cover;
  background-repeat:no-repeat;
