--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ li.dropdown {
   display: block;
 }
 body {
- background-image:url("blob:https://app.astrobin.com/7c4d46b0-0447-4c12-82e6-3b995bac2fe6") ;
+ background-image:url("https://i.postimg.cc/C1pzFhR9/result-1.png") ;
  color: white;
  background-size:cover;
  background-repeat:no-repeat;
