--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ li.dropdown {
 body {
  background-image:url("https://i.postimg.cc/C1pzFhR9/result-1.png") ;
  color: white;
- background-size:cover;
+ background-size:80% 80%;
  background-repeat:no-repeat;
  text-transform:capitalize;
 
