--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@ li.dropdown {
 body {
  background-image:url("https://i.postimg.cc/C1pzFhR9/result-1.png") ;
  color: white;
-background-position:50% 70%;
+background-position:50% 56%;
  background-size:cover;
  background-repeat:no-repeat;
  text-transform:capitalize;
+    background-color:black;
 
 }
 h1 {
