--- a/timelapse.html
+++ b/timelapse.html
@@ -36,7 +36,7 @@
     </div>
     <h1> TIMELAPSE </h1>
     <div class="iframe">
-        <iframe src="https://drive.google.com/file/d/1H2P8QDd7K1jVa5N4-wv4Q0GQtwklmNHh/preview" width="1280" height="960" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1H2P8QDd7K1jVa5N4-wv4Q0GQtwklmNHh/preview" width="36240" height="2880" allow="fullscreen"></iframe>
     </div>
     </body>
 </html>
