--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ h1 {
   <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">tutorial</a>
     <div class="dropdown-content">
             <a href="stackingtutorial.html">stacking tutorial</a>
-            <a href="planewidfieldtutorial.html"> plane widefield tutorial</a>
+            <a href="planewidefieldtutorial.html"> plane widefield tutorial</a>
       
     </div>
   </li>
