--- a/planewidefieldtutorial.html
+++ b/planewidefieldtutorial.html
@@ -3,6 +3,14 @@
     <head>
         <title> plane widefield tutorial</title>
     </head>
+    <style>
+         .link {
+            background-color:white;
+            color:black;
+            text-align:center;
+        }
+    </style>
+    <body>
     <h1>Plane Widefield Tutorial</h1>
     <h2>Planning</h2>
     <p> The planning here requires the most attention as you can't just bring anything on a plane, you can only bring what fits in your carry on.<br>
@@ -40,5 +48,5 @@
         <li> Open camera raw on Photoshop and take away reflections (if there are any) and play around with the features.</li>
         <li> Enjoy results!(consider printing/publishing the image)</li>
     </ol>
-
+    </body>
 </html>
