--- a/planewidefieldtutorial.html
+++ b/planewidefieldtutorial.html
@@ -11,6 +11,9 @@
         }
     </style>
     <body>
+         <div class="link">
+            <a href="index.html"> home</a>
+            </div>
     <h1>Plane Widefield Tutorial</h1>
     <h2>Planning</h2>
     <p> The planning here requires the most attention as you can't just bring anything on a plane, you can only bring what fits in your carry on.<br>
