--- a/planewidefieldtutorial.html
+++ b/planewidefieldtutorial.html
@@ -9,6 +9,11 @@
             color:black;
             text-align:center;
         }
+        body{
+            background: black;
+            text-decoration-color: white;
+            text-decoration: Trebuchet MS;
+        }
     </style>
     <body>
          <div class="link">
