changed text color

--- a/planewidefieldtutorial.html
+++ b/planewidefieldtutorial.html
@@ -11,7 +11,7 @@
         }
         body{
             background: black;
-            text-decoration-color: white;
+            color:white;
             text-decoration: Trebuchet MS;
         }
     </style>
