added images to planewidefield tutroail

--- a/planewidefieldtutorial.html
+++ b/planewidefieldtutorial.html
@@ -14,6 +14,10 @@
             color:white;
             text-decoration: Trebuchet MS;
         }
+        .setupimage {
+            text-align:center;
+            margin-top: 50px;
+        }
     </style>
     <body>
          <div class="link">
@@ -56,5 +60,13 @@
         <li> Open camera raw on Photoshop and take away reflections (if there are any) and play around with the features.</li>
         <li> Enjoy results!(consider printing/publishing the image)</li>
     </ol>
+    <div class="setupimage">
+        <img src="https://i.postimg.cc/tCY0q8Lz/IMG-7744.jpg" width="50%" length="50%">
+    
+    <h6><b>A quick picture I took of my setup (sorry if its a little blurry)</b></h6>
+    <div class="setupimage">
+        <img src="https://i.postimg.cc/NGNqwQPM/IMG-7751.jpg" width="50%" length="50%">
+        <h6><b>also setup the binocuar and managed to stargaze a bit and snap this picture I took with my phone (again, sorry if it's a little blurry)</b></h6>
+    </div>
     </body>
 </html>
