changed pciture size + font size

--- a/planewidefieldtutorial.html
+++ b/planewidefieldtutorial.html
@@ -61,12 +61,12 @@
         <li> Enjoy results!(consider printing/publishing the image)</li>
     </ol>
     <div class="setupimage">
-        <img src="https://i.postimg.cc/tCY0q8Lz/IMG-7744.jpg" width="50%" length="50%">
+        <img src="https://i.postimg.cc/tCY0q8Lz/IMG-7744.jpg" width="30%" length="30%">
     
-    <h6><b>A quick picture I took of my setup (sorry if its a little blurry)</b></h6>
+    <h4><b>A quick picture I took of my setup (sorry if its a little blurry)</b></h4>
     <div class="setupimage">
-        <img src="https://i.postimg.cc/NGNqwQPM/IMG-7751.jpg" width="50%" length="50%">
-        <h6><b>also setup the binocuar and managed to stargaze a bit and snap this picture I took with my phone (again, sorry if it's a little blurry)</b></h6>
+        <img src="https://i.postimg.cc/NGNqwQPM/IMG-7751.jpg" width="30%" length="30%">
+        <h4><b>also setup the binocular and managed to stargaze a bit and snap this picture I took with my phone (again, sorry if it's a little blurry)</b></h6>
     </div>
     </body>
 </html>
