--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <meta name="google-site-verification" content="CBzgleB06kn8o_1NbGVpNAjAYhsTaU6nu9vUegccIb8" />
         <title>PHOTOS</title>
     </head>
     <style>
