--- a/contactme.html
+++ b/contactme.html
@@ -7,6 +7,9 @@
         <style>
             body {
                 text-align: center;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                color: white;
+                background-color: black;
             }
         </style>
     </header>
