--- a/index.html
+++ b/index.html
@@ -152,8 +152,11 @@ h1 {
     <a href="javascript:void(0)" class="dropbtn">plane</a>
     <div class="dropdown-content">
     <a href="planewidefield.html">plane wide fields</a>
-      
     </div>
+    </li>
+    <li class="dropdown">
+    <a href="contactme.html" class="dropbtn">Contact Me</a>
+    </li>
 </ul>
 </nav>
     </body>
