--- a/contactme.html
+++ b/contactme.html
@@ -5,6 +5,9 @@
             ContactMe
         </title>
         <style>
+            a {
+                color: white;
+            }
             body {
                 text-align: center;
                 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
