--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
       <meta name="google-site-verification" content="CBzgleB06kn8o_1NbGVpNAjAYhsTaU6nu9vUegccIb8" />
-        <title>PHOTOS</title>
+        <title>Nikolaos Bafits Astrophotography and more</title>
+        <meta name="description" content="Nikolaos Bafitis, nikolaos bafitis, this site is for astrophotography, science, coding,programming, and tutorials related to those things"></meta>
     </head>
     <style>
     nav {
