--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@ h1 {
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Deep Sky</a>
     <div class="dropdown-content">
-      <a href="m13.html">m13</a>
+      <a href="m13.html">hercules</a>
       <a href="dumbbell.html">dumbbell</a>
       <a href="andromeda.html">andromeda</a>
       <a href="pleiades.html">pleiades</a>
+        <a href="m1.html">crab</a>
     </div>
   </li>
   <li class="dropdown">
