--- a/m1.html
+++ b/m1.html
@@ -26,7 +26,9 @@
         .description:hover .text{
             opacity:1;
         }
-       
+       .link{
+        text-color:white;
+       }
     </style>
 </head>
 <body>
