--- a/m1.html
+++ b/m1.html
@@ -26,8 +26,11 @@
         .description:hover .text{
             opacity:1;
         }
+       a{
+        color:blue;
+       }
        .link{
-        text-color:white;
+        background-color: white;
        }
     </style>
 </head>
