--- a/m1.html
+++ b/m1.html
@@ -13,7 +13,7 @@
             
         }
         p {
-            color:white;
+            color:black;
         
         }
         .text {
@@ -25,6 +25,9 @@
         }
         .description:hover .text{
             opacity:1;
+            background-color: white;
+            z-index: 1000;
+            position: relative;
         }
        a{
         color:blue;
