--- a/contactme.html
+++ b/contactme.html
@@ -17,8 +17,9 @@
         </style>
     </header>
     <body>
+        <a href="index.html" >home</a>
         <h1><b>Contact Me</b></h1>
-        <h3> Email: <a href="nikolaosbafitis@gmail.com" target="_blank"></a></h3>
+        <h3> Email: nikolaosbafitis@gmail.com</h3>
         <h3> Phone: +1 202 441 3344</h3>
 
     </body>
