--- a/m13.html
+++ b/m13.html
@@ -14,6 +14,17 @@
         a {
             color:black;
         }
+        .one {
+            text-align: center;
+            margin: 100px;
+        }
+        .two {
+            text-align: center;
+            margin: 100px;
+        }
+        p {
+            color: white;
+        }
         </style>
     </head>
 
@@ -21,7 +32,15 @@
     <div class="link">
     <a href="index.html"> home</a>
     </div>
-        <img src="https://cdn.astrobin.com/thumbs/Sf7Pi0AoO_f__2560x0_esdlMP5Y.png" width="100%" height="100%">
+        <div class="one">
+        <img src="https://cdn.astrobin.com/thumbs/Sf7Pi0AoO_f__2560x0_esdlMP5Y.png" width="70%" >
+        <p> this image was taken with my iphone 14,<br> I made it black and white so that the distortion wan't visible,<br> I processed it in siril</p>
+
+        </div>
+        <div class="two">
+<img src="https://i.postimg.cc/VLKDyBgt/DSCF0011.jpg" width="70%" >
+<p> this was a 2 second exposure with my fuji x t 30,<br> I stretched this later in siril</p>
+        </div>
         
 
         
