--- a/contactme.html
+++ b/contactme.html
@@ -19,8 +19,8 @@
     <body>
         <a href="index.html" >home</a>
         <h1><b>Contact Me</b></h1>
-        <h3> Email: nikolaosbafitis@gmail.com</h3>
-        <h3> Phone: +1 202 441 3344</h3>
+        <h3> Email: astrobafitis@gmail.com</h3>
+        
 
     </body>
 </html>
