--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ h1 {
       <a href="andromeda.html">andromeda</a>
       <a href="pleiades.html">pleiades</a>
         <a href="m1.html">crab</a>
+        <a href "lagoon.html">lagoon</a>
     </div>
   </li>
   <li class="dropdown">
@@ -161,5 +162,6 @@ h1 {
     </li>
 </ul>
 </nav>
+
     </body>
 </html>
