--- a/lagoon.html
+++ b/lagoon.html
@@ -2,10 +2,17 @@
 <html>
     <head>
         <title> lagoon nebula</title>
+        <style>
+            h1 {
+                text-align:center;
+            }
+
+        </style>
     </head>
     <body>
         <h1>Lagoon nebula</h1>
         <img src="https://i.postimg.cc/5tgfbdXg/final-version-3-Gra-Xpert.jpg">
+        <p>this was taken in greece at 2.3 km up using 1 second exposures and my fuji x t 30 with alt azimuth tracking,<br> for more information on my experience in greece please look under the star parties category</p>
         
     </body>
 </html>
