black bg color lagoon

--- a/lagoon.html
+++ b/lagoon.html
@@ -6,6 +6,9 @@
             .center {
                 text-align:center;
             }
+            body {
+                background-color:black;
+            }
 
         </style>
     </head>
