--- a/HAT-P-59b.html
+++ b/HAT-P-59b.html
@@ -5,12 +5,27 @@
 
         </header>
         <style>
+body{
+    background-color:black;
+    color:white;
 
+}
+a {
+    color:black;
+
+}
+.link {
+    background-color:white;
+}
         </style>
 
     </title>
     <body>
-        These transit curves were taken using my seestar s50 in eq mode at 20 second exposures, I then processed them using Siril and fit the model using astroimageJ. 
+        <div class="link">
+<a href="index.html">home</a>
+        </div>
+
+        <p>These transit curves were taken using my seestar s50 in eq mode at 20 second exposures, I then processed them using Siril and fit the model using astroimageJ.</p> 
         <img src="https://i.postimg.cc/m2STv20R/second-attempt-at-modification.png">
         <img src="https://i.postimg.cc/hP0KkPHD/second-attempt-at-modification1.png">
         <p>These two are just the raw data along with the magnitude error</p>
