--- a/lagoon.html
+++ b/lagoon.html
@@ -8,11 +8,29 @@
             }
             body {
                 background-color:black;
+                
             }
+            h1{
+                color:white;
+
+            }
+            p{
+                color:white;
+            }
+            a{
+                color:black;
+            }
+            .link{
+                background-color:white;
+            }
+
 
         </style>
     </head>
     <body>
+        <div class="link">
+            <a href="index.html"></a>
+        </div>
         <div class="center">
  <h1>Lagoon nebula</h1>
         <img src="https://i.postimg.cc/5tgfbdXg/final-version-3-Gra-Xpert.jpg">
