--- a/lagoon.html
+++ b/lagoon.html
@@ -22,6 +22,7 @@
             }
             .link{
                 background-color:white;
+                text-align: center;
             }
 
 
